Adding Kratos config

--- a/main/aws/Single-Region-Multi-AZ/resources/values_kratos.yaml
+++ b/main/aws/Single-Region-Multi-AZ/resources/values_kratos.yaml
@@ -24,6 +24,8 @@ kratos:
       public:
         port: ${PUBLIC_PORT}
     dsn: "cockroach://root@${CRDB_FQDN}:26257/kratos"
+    selfservice:
+      default_browser_return_url: ""
     identity:
       default_schema_id: default
       schemas:
