Update bastion module

--- a/main/aws/Single-Region-Multi-AZ/resources/values_kratos.yaml
+++ b/main/aws/Single-Region-Multi-AZ/resources/values_kratos.yaml
@@ -2,6 +2,8 @@ image:
   repository: ${IMAGE}
   tag: ${RELEASE}
   pullPolicy: IfNotPresent
+imagePullSecrets:
+  - name: ory-oel-gcr-secret
 service:
   admin:
     enabled: true
